--- a/index.html
+++ b/index.html
@@ -2,8 +2,14 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>CHIP-8 emulator with AssemblyScript and WebAssembly</title>
+    <title>CHIP-8 interpreter with AssemblyScript and WebAssembly</title>
     <script type="module" src="./index.js"></script>
   </head>
-  <body></body>
+  <body>
+    <h1>CHIP-8 interpreter with AssemblyScript and WebAssembly</h1>
+    <label for="fileinput">Upload a Chip-8 game: </label>
+    <input type="file" id="fileinput" autocomplete="off" />
+    <br />
+    <canvas id="canvas">Your browser does not support HTML5</canvas>
+  </body>
 </html>
