add first instructions for ibm logo

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
         <div id="selection">
             <select id="game-selection">
               <option>SELECT GAME</option>
+              <option value="IBM_LOGO.ch8">IBM LOGO</option>
               <option value="PONG.ch8">PONG</option>
               <option value="BRIX.ch8">BRIX</option>
               <option value="TETRIS.ch8">TETRIS</option>
