--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
       <select id="game-selection">
         <option>SELECT GAME</option>
         <option value="IBM_LOGO.ch8">IBM LOGO</option>
+        <option value="TEST.ch8">TEST</option>
         <option value="PONG.ch8">PONG</option>
         <option value="BRIX.ch8">BRIX</option>
         <option value="TETRIS.ch8">TETRIS</option>
