--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
     <div id="selection">
       <select id="game-selection">
         <option>SELECT GAME</option>
-        <option value="IBM_LOGO.ch8">IBM LOGO</option>
+        <option value="IBM.ch8">IBM LOGO</option>
         <option value="TEST.ch8">TEST</option>
         <option value="PONG.ch8">PONG</option>
         <option value="BRIX.ch8">BRIX</option>
